<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="NcAxisRefStatus" Id="{c7d4df51-2260-426e-9abc-1d4e511802c8}">
    <Declaration><![CDATA[TYPE NcAxisRefStatus :
STRUCT
	
	_Error				: BOOL;
	_ErrorID			: UDINT;
	_ErrorStop			: BOOL;
	_Disabled			: BOOL;
	_Stopping			: BOOL;
	_StandStill			: BOOL;
	_DiscreteMotion		: BOOL;
	_ContinuousMotion	: BOOL;
	_SynchronizedMotion	: BOOL;
	_Homing				: BOOL;
	_ConstantVelocity	: BOOL;
	_Accelerating		: BOOL;
	_Decelerating		: BOOL;
	_Status				: ST_AxisStatus;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>